--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,9 @@ body {
 a {
   color: inherit;
 }
+
+#root {
+  min-height: calc(100vh - var(--bodyPaddingTop));
+  display: flex;
+  flex-direction: column;
+}
